--- a/index.html
+++ b/index.html
@@ -1,2 +1,58 @@
 <html>
+
+<head>
+    <title>
+        Loader
+    </title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
+
+<body>
+    <div id="circle">
+        <div class="loader">
+            <div class="loader">
+                <div class="loader">
+                    <div class="loader">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+
+        html, body{
+            width: 100 %;
+            height: 100 %;
+        }
+
+        body {
+            background: #0d161f;
+        }
+
+        #circle {
+            position: absolute;
+            top: 50 %;
+            left: 50 %;
+            transform: translate(-50 %, -50 %);
+            width: 150px;
+            height: 150px;
+        }
+
+        .loader {
+            width: calc(100 % - 0px);
+            height: calc(100 % - 0px);
+            border: 8px solid #162534;
+            border - top: 8px solid #09f;
+            border - radius: 50 %;
+            animation: rotate 5s linear infinite;
+        }
+
+        @keyframes rotate {
+            100 % { transform: rotate(360deg); }
+        } 
+    </script>
+</body>
+
 </html>
